--- a/lib/src/main/resources/i18n/strings/strings.en_us.properties
+++ b/lib/src/main/resources/i18n/strings/strings.en_us.properties
@@ -1,2 +1,4 @@
+mails.changePrimaryEmail.currentEmailCode.title=Coinex - Code to Confirm Primary Email Change
+mails.changePrimaryEmail.newEmailToken.title=Coinex - Primary email change
 mails.emailConfirmation.title=Coinex - Confirm your Email
 mails.passwordRecovery.title=Coinex - Password Recovery
